fix(website): update translator info

--- a/locale/ja/crystal-website/_posts/2020-06-09-crystal-0.35.0-released.md
+++ b/locale/ja/crystal-website/_posts/2020-06-09-crystal-0.35.0-released.md
@@ -3,7 +3,7 @@ title: Crystal 0.35.0がリリースされました！
 summary: Crystal は新しい開発リリースをしました。
 thumbnail: +
 
-author: bcardiff
+author: bcardiff,makenowjust
 release_notes: true
 ---
 
@@ -180,7 +180,7 @@ Log.info &.emit(action: "log_in", user_id: 42) # empty message
 
 macOS ユーザーへ、10.15 (Catalina) で起こるいくつかの互換性の問題を[#9296](https://github.com/crystal-lang/crystal/pull/9296)で修正しました。
 
-BSD のユーザーヘ、DragonFly(BSD) のサポートを[#9178](https://github.com/crystal-lang/crystal/pull/9178)で追加しますた。
+BSD のユーザーヘ、DragonFly(BSD) のサポートを[#9178](https://github.com/crystal-lang/crystal/pull/9178)で追加しました。
 
 musl ユーザーへ、奇妙な segfaults が[#9238](https://github.com/crystal-lang/crystal/pull/9238)で、バックトレースが空になる問題が[#9267](https://github.com/crystal-lang/crystal/pull/9267)で修正されました。
 
