fix(website): some update 0.35.0 release note

--- a/locale/ja/crystal-website/_posts/2020-06-09-crystal-0.35.0-released.md
+++ b/locale/ja/crystal-website/_posts/2020-06-09-crystal-0.35.0-released.md
@@ -30,7 +30,7 @@ release_notes: true
 この決定によって `case ...  when` の意味は身近なままとなり、既存のコードに影響することなく網羅性チェックをする case 文を洗練させていくことが可能になります。より詳細な議論は[#9258](https://github.com/crystal-lang/crystal/pull/9258)と[#9045](https://github.com/crystal-lang/crystal/pull/9045)を参照してください。
 
 <div class="code_section">{% highlight crystal %}
-# Compiles!Totally fine
+# Compiles! Totally fine
 case 1 || "a"
 when Int32
 end
@@ -53,9 +53,9 @@ end
 
 パーサーはたくさんの愛を受けました。エッジケースの修正や、そこそこのリファクタリングが[#9208](https://github.com/crystal-lang/crystal/pull/9208)でされています。
 
-言語のいくつかの機能はより良い動作のために反芻が必要でした。このリリースではオートキャストが多重ディスパッチやユニオンのデフォルト値に対して動作するゆおになりました。詳細は[#9004](https://github.com/crystal-lang/crystal/pull/9004)と[#9366](https://github.com/crystal-lang/crystal/pull/9366)を確認してください。これはいくつかの場合の予期しない残念な挙動を解決するでしょう。
+言語のいくつかの機能はより良い動作のために反芻が必要でした。このリリースではオートキャストが多重ディスパッチやユニオンのデフォルト値に対して動作するようになりました。詳細は[#9004](https://github.com/crystal-lang/crystal/pull/9004)と[#9366](https://github.com/crystal-lang/crystal/pull/9366)を確認してください。これはいくつかの場合の予期しない残念な挙動を解決するでしょう。
 
-既存の機能の改善の前に、Crystal のデバッグ機能の改善を待ち臨んでいる人もいることでしょう。この改善はまだ完了してはいませんが、[#8538](https://github.com/crystal-lang/crystal/pull/8538)で大きな一歩を踏み出すことができました。この [VSCode で Crystal のプログラムをどうやってデバッグするかを説明した記事](https://dev.to/bcardiff/debug-crystal-in-vscode-via-codelldb-3lf)で、どう設定すれば良いかや、スクリーンショットを確認できます。
+既存の機能の改善の背景には、Crystal のデバッグ機能の改善を待ち望まれていたことがあります。この改善はまだ完了してはいませんが、[#8538](https://github.com/crystal-lang/crystal/pull/8538)で大きな一歩を踏み出すことができました。この [VSCode で Crystal のプログラムをどうやってデバッグするかを説明した記事](https://dev.to/bcardiff/debug-crystal-in-vscode-via-codelldb-3lf)で、どう設定すれば良いかや、スクリーンショットを確認できます。
 
 `@[Link]` アノテーションは少しだけ再デザインされました。pkg-config とより統合されて、`static:` オプションのサポートが無くなりました。これによって将来、デフォルト値をいい感じに提供しつつ、リンクを詳細に設定できるようにすることを見据えています。詳細は[#8972](https://github.com/crystal-lang/crystal/pull/8972)を確認してください。
 
@@ -93,9 +93,9 @@ Shards v0.11.1 が今回のリリースではバンドルされます。
 
 その他の `IO` の破壊的な変更としては、`#skip`、`#write`、`#write_utf8`、`#write_byte`、`#write_bytes`、や`#skip_to_end` がスキップした/書き込んだバイト数の数値を返すようになったことがあります。これは他の言語でもそのようになっており、書き込み中に追加の呼び出しなく現在のストリームを位置を把握できるようになります。詳細は[#9233](https://github.com/crystal-lang/crystal/pull/9233)と[#9363](https://github.com/crystal-lang/crystal/pull/9363)を確認してください。
 
-`@[Experimental]` アノテーションという、ライブラリや言語、shardの部分に細心の注意と共に使う必要のあるという指定をするためのものが導入されました。実験的ば (experimental) 機能は変更や破壊、もしくは削除を Semver の規約に関わらず行なっても良いものとします。今のところ、アノテーションはドキュメントジェネレータで利用されています。ですが、他にも追加の機能のアイディアがあります。詳細は[#9244](https://github.com/crystal-lang/crystal/pull/9244)を確認してください。
+`@[Experimental]` アノテーションという、ライブラリや言語、shardの部分に細心の注意と共に使う必要のあるという指定をするためのものが導入されました。実験的な (experimental) 機能は変更や破壊、もしくは削除を Semver の規約に関わらず行なっても良いものとします。今のところ、アノテーションはドキュメントジェネレータで利用されています。ですが、他にも追加の機能のアイディアがあります。詳細は[#9244](https://github.com/crystal-lang/crystal/pull/9244)を確認してください。
 
-`Digest` 型がリガクタリングされて、いくつかのメソッドの名前が変更されたことに注意する必要があるかもしれません。詳細は[#8426](https://github.com/crystal-lang/crystal/pull/8426)を確認してください。
+`Digest` 型がリファクタリングされて、いくつかのメソッドの名前が変更されたことに注意する必要があるかもしれません。詳細は[#8426](https://github.com/crystal-lang/crystal/pull/8426)を確認してください。
 
 さて、`OptionParser` がサブコマンドを定義できるようになりました。詳細は[#9009](https://github.com/crystal-lang/crystal/pull/9009)を確認してください。
 
@@ -105,7 +105,7 @@ Shards v0.11.1 が今回のリリースではバンドルされます。
 
 ### マクロ
 
-クロスコンパイルの際、`host_flag?` というマクロが追加されたことを知っておくと便利でしょう。これは `flag?` のようなものですが、ホストのマシンの情報に基いて解決されます。詳細は[#9049](https://github.com/crystal-lang/crystal/pull/9049)を確認してください。
+クロスコンパイルの際、`host_flag?` というマクロが追加されたことを知っておくと便利でしょう。これは `flag?` のようなものですが、ホストのマシンで解決されます。詳細は[#9049](https://github.com/crystal-lang/crystal/pull/9049)を確認してください。
 
 ### 数値計算
 
@@ -119,7 +119,7 @@ Shards v0.11.1 が今回のリリースではバンドルされます。
 
 ### 時刻
 
-これからは `Time#to_rfc3339` のデフォルトの精度は秒となり、それ以上の精度は出力されません。より細かな精度が必要な場合は `fraction_digits` という名前付き引数に 0. 3, 6, 9 という精度の桁数を指定してください。[#9283](https://github.com/crystal-lang/crystal/pull/9283) で、時刻に応じて細かな秒を表示する機能を削除しています。
+これからは `Time#to_rfc3339` のデフォルトの精度は秒となり、それ以上の精度は出力されません。より細かな精度が必要な場合は `fraction_digits` という名前付き引数に 0. 3, 6, 9 という精度の桁数を指定してください。[#9283](https://github.com/crystal-lang/crystal/pull/9283) で、時刻に応じて小数点以下の秒を表示する機能を削除しています。
 
 ### ネットワーク
 
@@ -133,7 +133,7 @@ SSL サーバーのデフォルト値を[#9026](https://github.com/crystal-lang/
 
 [#9293](https://github.com/crystal-lang/crystal/pull/9293)で `Log::Severity::Warning` を `Warn` へと名前を変更しました。`Log.warn { ... }` がありましたが、これはそのままで、警告を表します。。この変更は `:warning` やほとんどの環境変数経由での設定に影響します。同様に `Verbose` を削除して、`Trace` と `Notice` を [#9107](https://github.com/crystal-lang/crystal/pull/9107)で追加しました。
 
-ログのセットアップがよりシンプルになりました。`Log.setup*` 系の2つのメソッドがあります。これらのメソッドはソースとバックエンドの間の設定を完全にまとめます。
+ログのセットアップがよりシンプルになりました。`Log.setup*` 系の2つのメソッドがあります。これらのメソッドは常にソースとバックエンドの間のバインディングを完全に設定するでしょう。
 
 <div class="code_section">{% highlight crystal %}
 Log.setup :debug # will show debug or above in the stdout for all source
