feat(website): translate 0.35.1 release note

--- a/locale/ja/crystal-website/_posts/2020-06-09-crystal-0.35.0-released.md
+++ b/locale/ja/crystal-website/_posts/2020-06-09-crystal-0.35.0-released.md
@@ -208,6 +208,6 @@ Crystal をアップデートしてください。そして、問題の報告を
 
 すべての非推奨にした定義は1.0では削除される予定です。1.0をクリーンなバージョンにしたいと思っています。
 
-[84codes](https://www.84codes.com/)、[Nikola Motor Company](https://nikolamotor.com/)、そして大勢の[スポンサー](/sponsors)の継続的なサポートにたくさんの感謝をします。継続的に開発・メンテナンスを続けていくには、寄付が不可欠です。[OpenCollective](https://opencollective.com/crystal-lang) と [Bountysource](https://salt.bountysource.com/teams/crystal-lang) の2箇所えで受け付けています。Crystal の直接のスポンサーになりたい場合や、他のサポート方法を探している場合は [crystal@manas.tech](mailto:crystal@manas.tech) に連絡してください。それでは、ここまで読んでいただきありがとうございます！
+[84codes](https://www.84codes.com/)、[Nikola Motor Company](https://nikolamotor.com/)、そして大勢の[スポンサー](/sponsors)の継続的なサポートにたくさんの感謝をします。継続的に開発・メンテナンスを続けていくには、寄付が不可欠です。[OpenCollective](https://opencollective.com/crystal-lang) と [Bountysource](https://salt.bountysource.com/teams/crystal-lang) の2箇所で受け付けています。Crystal の直接のスポンサーになりたい場合や、他のサポート方法を探している場合は [crystal@manas.tech](mailto:crystal@manas.tech) に連絡してください。それでは、ここまで読んでいただきありがとうございます！
 
 
