--- a/locale/ja/crystal-website/_posts/2020-06-19-crystal-0.35.1-released.md
+++ b/locale/ja/crystal-website/_posts/2020-06-19-crystal-0.35.1-released.md
@@ -1,33 +1,34 @@
 ---
-title: Crystal 0.35.1 released!
-summary: Crystal has a new development release.
+title: Crystal 0.35.1がリリースされました！
+summary: Crystal は新しい開発リリースをしました。
 thumbnail: +
-author: bcardiff
+
+author: bcardiff,makenowjust
 release_notes: true
 ---
 
-[Crystal 0.35.1](https://github.com/crystal-lang/crystal/releases/tag/0.35.1) has been released!
+[Crystal 0.35.1](https://github.com/crystal-lang/crystal/releases/tag/0.35.1) がリリースされました。
 
-This release is not as exciting as 0.35.0 if you missed that announcement [read it first](/2020/06/09/crystal-0.35.0-released.html).
+このリリースは0.35.0ほど刺激的なものではありません。もしこちらのアナウンスを見ていなければ、[こちらをまず読んでください](/2020/06/09/crystal-0.35.0-released.html)。
 
-This patch release is needed to iterate on some recent additions and fix a couple of regressions.
+このパッチリリースは最近の追加や2つのリグレッションの修正を反映させるものです。
 
-There are [13 commits since 0.35.0](https://github.com/crystal-lang/crystal/compare/0.35.0...0.35.1) by 5 contributors.
+5人のコントリビュータによって[0.35.0から13のコミットが](https://github.com/crystal-lang/crystal/compare/0.35.0...0.35.1)ありました。
 
-Let’s get right into some of the highlights in this release. Don't miss out on the rest of the [release changelog](https://github.com/crystal-lang/crystal/releases/tag/0.35.1).
+それでは今回のリリースのハイライトを紹介していきます。ですが、[リリースのチェンジログ](https://github.com/crystal-lang/crystal/releases/tag/0.35.1)にもたくさんの価値ある情報があることを忘れないでください。
 
-## Standard library
+## 標準ライブラリ
 
-We reverted the changes in `IO#write` introduced in 0.35.0. They will return `Nil` as before. The intended change was more disruptive than we wanted. Apologies for the back and forth.
+0.35.0で導入された`IO#write`の変更が取り消されることになりました。以前のように`Nil`を返すことになります。この意図的な変更は想定以上に破壊的でした。振り回してしまったことをお詫びします。
 
-For the shards that were updated for 0.35.0 regarding this, it should be enough to compare against 0.35.0 exactly. For the shards that didn’t upgrade to 0.35.0, there is no action needed probably. Read more at [#9469](https://github.com/crystal-lang/crystal/pull/9469).
+このため、0.35.0向けにアップデートした shard については、0.35.0と十分に比較する必要があります。0.35.0 向けにアップデートしていない shard はとくに追加で何かすることはありません。詳細は[#9469](https://github.com/crystal-lang/crystal/pull/9469)を確認してください。
 
-The OpenSSL client context is now configured by default with less strict ciphers compatibility for convenience. Ther server context enforces a more secure set. Read more at [#9459](https://github.com/crystal-lang/crystal/pull/9459).
+OpenSSL クライアントのコンテキストは利便性のため、デフォルトでやや厳格でない暗号も設定されるようになりました。サーバーのコンテキストはよりセキュアなものになっています。詳細は[#9459](https://github.com/crystal-lang/crystal/pull/9459)を確認してください。
 
-## Next steps
+## 次のステップ
 
-Please update your Crystal and report any issues. We will keep moving forward and start the development focusing on 1.0.0. We expect to release some 1.0.0-preX to iterate on some final fixes.
+Crystal をアップデートしてください。そして、問題の報告を心待ちにしています。私たちは1.0.0に向けての開発を始めています。1.0.0-preX のようなリリースをして、最終的な調整を重ねていくでしょう。
 
-All the deprecated definitions will be removed for 1.0. We want a clean 1.0.
+すべての非推奨にした定義は1.0では削除される予定です。1.0をクリーンなバージョンにしたいと思っています。
 
-We have been able to do all of this thanks to the continued support of [84codes](https://www.84codes.com/), [Nikola Motor Company](https://nikolamotor.com/) and every other [sponsor](/sponsors). It is extremely important for us to sustain the support through donations, so that we can maintain this development pace. [OpenCollective](https://opencollective.com/crystal-lang) is available for that. Reach out to [crystal@manas.tech](mailto:crystal@manas.tech) if you’d like to become a direct sponsor or find other ways to support Crystal. We thank you in advance!
+[84codes](https://www.84codes.com/)、[Nikola Motor Company](https://nikolamotor.com/)、そして大勢の[スポンサー](/sponsors)の継続的なサポートにたくさんの感謝をします。継続的に開発・メンテナンスを続けていくには、寄付が不可欠です。[OpenCollective](https://opencollective.com/crystal-lang) で受け付けています。Crystal の直接のスポンサーになりたい場合や、他のサポート方法を見つけた場合は、[crystal@manas.tech](mailto:crystal@manas.tech) に連絡してください。それでは、ここまで読んでいただきありがとうございます！
